adicionado JS para o header das páginas em modo mobile

--- a/Web/index.html
+++ b/Web/index.html
@@ -29,7 +29,8 @@
         <img id="logo" src="assets/images/logo.png" alt="movEasy">
       </div>
       <div class="menu-mobile">
-        <img id="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
+        <img id="icone-mobile" class="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
+        <img id="icone-mobile2" class="icone-mobile hidden" src="./assets/images/xmark.svg" alt="menu-mobile">
         <div class="menu-mobile-links">
           <img id="" src="./assets/images/logo_original.png" alt="movEasy">
           <a href="./index.html" class="active">HOME</a>
@@ -136,6 +137,7 @@
   </div>
 
   <script src="./js/index.js"></script>
+  <script src="./js/header.js"></script>
 </body>
 
 </html>
