--- a/Web/sobre.html
+++ b/Web/sobre.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/sobre.css">
     <link rel="stylesheet" href="./css/header.css">
     <script src="./js/saved_resource"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -31,30 +32,30 @@
 
 <body>
     <div class="banner bg-local">
-
         <header id="header" class="flex justify-between	px-16 pt-8">
             <div>
-                <img id="logo" src="assets/images/logo.png" alt="movEasy">
+              <img id="logo" src="assets/images/logo.png" alt="movEasy">
             </div>
             <div class="menu-mobile">
-                <img id="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
-                <div class="menu-mobile-links">
-                    <img id="" src="./assets/images/logo_original.png" alt="movEasy">
-                    <a href="./index.html">HOME</a>
-                    <a href="./sobre.html" class="active">SOBRE</a>
-                    <a href="./faq.html">FAQ</a>
-                    <a href="./suporte.html">SUPORTE</a>
-                    <a href="./Login-usuario.html">LOGIN</a>
-                </div>
-            </div>
-            <div class="menu-desktop">
-                <a href="./index.html">HOME</a>
-                <a href="./sobre.html" class="active">SOBRE</a>
+              <img id="icone-mobile" class="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
+              <img id="icone-mobile2" class="icone-mobile hidden" src="./assets/images/xmark.svg" alt="menu-mobile">
+              <div class="menu-mobile-links">
+                <img id="" src="./assets/images/logo_original.png" alt="movEasy">
+                <a href="./index.html" class="active">HOME</a>
+                <a href="./sobre.html">SOBRE</a>
                 <a href="./faq.html">FAQ</a>
                 <a href="./suporte.html">SUPORTE</a>
                 <a href="./Login-usuario.html">LOGIN</a>
+              </div>
             </div>
-        </header>
+            <div class="menu-desktop">
+              <a href="./index.html" class="active">HOME</a>
+              <a href="./sobre.html">SOBRE</a>
+              <a href="./faq.html">FAQ</a>
+              <a href="./suporte.html">SUPORTE</a>
+              <a href="./Login-usuario.html">LOGIN</a>
+            </div>
+          </header>
         <div class="mx-8">
             <div>
                 <p class="text-3xl font-bold my-8">
@@ -104,5 +105,5 @@
         </div>
 
 </body>
-
+<script src="./js/header.js"></script>
 </html>
