--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -28,27 +28,28 @@
   <div class="banner">
     <header id="header" class="flex justify-between	px-16 pt-8">
       <div>
-          <img id="logo" src="assets/images/logo.png" alt="movEasy">
+        <img id="logo" src="assets/images/logo.png" alt="movEasy">
       </div>
       <div class="menu-mobile">
-          <img id="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
-          <div class="menu-mobile-links">
-              <img id="" src="./assets/images/logo_original.png" alt="movEasy">
-              <a href="./index.html">HOME</a>
-              <a href="./sobre.html" >SOBRE</a>
-              <a href="./faq.html">FAQ</a>
-              <a href="./suporte.html">SUPORTE</a>
-              <a href="./Login-usuario.html"class="active">LOGIN</a>
-          </div>
-      </div>
-      <div class="menu-desktop">
-          <a href="./index.html">HOME</a>
-          <a href="./sobre.html" >SOBRE</a>
+        <img id="icone-mobile" class="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
+        <img id="icone-mobile2" class="icone-mobile hidden" src="./assets/images/xmark.svg" alt="menu-mobile">
+        <div class="menu-mobile-links">
+          <img id="" src="./assets/images/logo_original.png" alt="movEasy">
+          <a href="./index.html" class="active">HOME</a>
+          <a href="./sobre.html">SOBRE</a>
           <a href="./faq.html">FAQ</a>
           <a href="./suporte.html">SUPORTE</a>
-          <a href="./Login-usuario.html" class="active">LOGIN</a>
+          <a href="./Login-usuario.html">LOGIN</a>
+        </div>
       </div>
-  </header>
+      <div class="menu-desktop">
+        <a href="./index.html" class="active">HOME</a>
+        <a href="./sobre.html">SOBRE</a>
+        <a href="./faq.html">FAQ</a>
+        <a href="./suporte.html">SUPORTE</a>
+        <a href="./Login-usuario.html">LOGIN</a>
+      </div>
+    </header>
     <div class="banner2">
       <form action="">
         <div class="corpo">
@@ -97,5 +98,5 @@
   </form>
   </div>
 </body>
-
+<script src="./js/header.js"></script>
 </html>
