--- a/Web/suporte.html
+++ b/Web/suporte.html
@@ -30,21 +30,22 @@
         <img id="logo" src="assets/images/logo.png" alt="movEasy">
       </div>
       <div class="menu-mobile">
-        <img id="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
+        <img id="icone-mobile" class="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
+        <img id="icone-mobile2" class="icone-mobile hidden" src="./assets/images/xmark.svg" alt="menu-mobile">
         <div class="menu-mobile-links">
           <img id="" src="./assets/images/logo_original.png" alt="movEasy">
-          <a href="./index.html">HOME</a>
+          <a href="./index.html" class="active">HOME</a>
           <a href="./sobre.html">SOBRE</a>
           <a href="./faq.html">FAQ</a>
-          <a href="./suporte.html" class="active">SUPORTE</a>
-          <a href="./Login-usuario.html" >LOGIN</a>
+          <a href="./suporte.html">SUPORTE</a>
+          <a href="./Login-usuario.html">LOGIN</a>
         </div>
       </div>
       <div class="menu-desktop">
-        <a href="./index.html">HOME</a>
+        <a href="./index.html" class="active">HOME</a>
         <a href="./sobre.html">SOBRE</a>
         <a href="./faq.html">FAQ</a>
-        <a href="./suporte.html" class="active">SUPORTE</a>
+        <a href="./suporte.html">SUPORTE</a>
         <a href="./Login-usuario.html">LOGIN</a>
       </div>
     </header>
@@ -98,5 +99,5 @@
   </div>
 
 </body>
-
+<script src="./js/header.js"></script>
 </html>
