Adicionei o manter conectado ao objeto values

--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -73,7 +73,7 @@
 
             <div class="">
               <div class="campos flex mt-4">
-                <input type="checkbox" class="bg-zinc-300"></input>
+                <input type="checkbox" class="bg-zinc-300" id="manterConectado"></input>
                 <span class="text-sm text-blue-800 font-bold" placeholder="Manter conectado">Manter
                   conectado?</span>
 
