--- a/Web/recuperacao.html
+++ b/Web/recuperacao.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./js/saved_resource"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <SCript src="./js/Login-usuario.js"></SCript>
+  <SCript src="./js/recuperacao.js"></SCript>
   <script>
     tailwind.config = {
       theme: {
@@ -55,40 +55,28 @@
         <div class="corpo">
           <div class="menu-login">
             <div class="controlador-login">
-              <div class="">
+              <div class="mt-8">
                 <label for="login-email"
                   class="text-black text-lg font-normal font-['Inter']"><strong>Email:</strong></label>
-                <input type="text" id="email-login" class="bg-zinc-300 rounded-[10px]" placeholder="Digite o seu email"></input>
-              </div>
-              <div>
-                <label for="login-senha"
-                  class="text-black text-lg py-5 font-normal font-['Inter']"><strong>Senha:</strong></label>
-                <input type="password" id="senha-login"class="bg-zinc-300 rounded-[10px]" placeholder="Digite a sua senha"></input>
+                <input type="text" id="email-recuperacao" class="bg-zinc-300 rounded-[10px]"
+                  placeholder="Digite o seu email"></input>
               </div>
             </div>
 
             <div class="botao-logar">
-              <button type="button" id="btn-logar" class="rounded-[10px] font-bold text-lg shadow">Login</button>
+              <button type="button" id="btn-recuperar" class="rounded-[10px] font-bold text-lg shadow">Recuperar
+                Conta</button>
             </div>
 
-            <div class="">
-              <div class="campos flex mt-4">
-                <input type="checkbox" class="bg-zinc-300" id="manterConectado"></input>
-                <span class="text-sm text-blue-800 font-bold" placeholder="Manter conectado">Manter
-                  conectado?</span>
-
+            <div class="mt-16">
+              <div class="campos mt-4 ml-4">
                 <div>
-                  <button type="button" class="recuperar-senha text-black text-lg font-normal font-['Inter']" onclick="window.location.href='./recuperacao.html';">
-                    Esqueceu a senha?</button>
+                  <button type="button" class="recuperar-senha text-black text-lg font-normal font-['Inter']"
+                    onclick="window.location.href='./Login-usuario.html';">
+                    < Voltar para o login</button>
                 </div>
               </div>
             </div>
-            <div class="texto-cadastro text-black text-lg font-normal font-['Inter']">Nao possui cadastro?</div>
-            <div>
-              <button type="button" id="btn-cadastrar" onclick="window.location.href='./cadastro.html';"
-                class="rounded-[10px] font-bold text-lg shadow">Cadastrar</button>
-            </div>
-
           </div>
 
         </div>
@@ -99,4 +87,5 @@
   </div>
 </body>
 <script src="./js/header.js"></script>
+
 </html>
