--- a/Web/recuperacao.html
+++ b/Web/recuperacao.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>MovEasy</title>
   <link rel="stylesheet" href="./css/header.css">
-  <link rel="stylesheet" href="./css/Login-usuario.css">
+  <link rel="stylesheet" href="./css/recuperacao.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./js/saved_resource"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
@@ -68,7 +68,7 @@
                 Conta</button>
             </div>
 
-            <div class="mt-16">
+            <div class="">
               <div class="campos mt-4 ml-4">
                 <div>
                   <button type="button" class="recuperar-senha text-black text-lg font-normal font-['Inter']"
