--- a/Web/cadastro.html
+++ b/Web/cadastro.html
@@ -84,10 +84,10 @@
             <input type="text" name="nome" id="nome" placeholder="ex: Fulano da Silva"></input>
 
             <label for="cadastro-formulario-cpf">CPF ou CNPJ:</label>
-            <input type="text" name="cpf-cnpj" id="cpf-cnpj" placeholder="Digite seu CPF ou CNPJ"></input>
+            <input type="number" name="cpf-cnpj" id="cpf-cnpj" placeholder="Digite seu CPF ou CNPJ"></input>
 
             <label for="cadastro-formulario-tel">Telefone:</label>
-            <input type="tel" name="telefone" id="telefone" placeholder="ex: (11) 99999-9999"></input>
+            <input type="number" name="telefone" id="telefone" placeholder="ex: (11) 99999-9999"></input>
           </div>
 
           <div class="checkbox_class">
