--- a/Web/index.html
+++ b/Web/index.html
@@ -24,9 +24,10 @@
 
 <body>
   <div class="banner bg-local">
-    <header id="header" class="flex justify-between	px-16 pt-8">
-      <div>
-        <img id="logo" src="assets/images/logo.png" alt="movEasy">
+    <header id="header" class="flex justify-between	px-16">
+      <div style="display:flex">
+        <img id="logo" src="./assets/images/logo_origin.png" alt="logo">
+
       </div>
       <div class="menu-mobile">
         <img id="icone-mobile" class="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
