Algumas alterações para padronizar

--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -62,7 +62,7 @@
               </div>
               <div>
                 <label for="login-senha"
-                  class="text-black text-lg py-5 font-normal font-['Inter']"><strong>Senha:</strong></label>
+                  class="text-lg py-5 font-normal font-['Inter']"><strong>Senha:</strong></label>
                 <input type="password" id="senha-login"class="bg-zinc-300 rounded-[10px]" placeholder="Digite a sua senha"></input>
               </div>
             </div>
