header adequado em todas as paginas

--- a/Web/faq.html
+++ b/Web/faq.html
@@ -24,26 +24,29 @@
 
 <body>
   <div class="banner bg-local">
-    <header id="header" class="flex justify-between	px-16 pt-8">
-      <div>
-        <img id="logo" src="assets/images/logo.png" alt="movEasy">
+    <header id="header" class="flex justify-between	px-16">
+      <div style="display:flex">
+        <img id="logo" src="./assets/images/logo_moveasy.png" alt="logo">
+
       </div>
       <div class="menu-mobile">
+        <img id="logo-mobile" src="./assets/images/logo_moveasy.png" alt="movEasy">
         <img id="icone-mobile" class="icone-mobile" src="./assets/images/bars-solid.png" alt="menu-mobile">
+        <div>
         <img id="icone-mobile2" class="icone-mobile hidden" src="./assets/images/xmark.svg" alt="menu-mobile">
+      </div>
         <div class="menu-mobile-links">
-          <img id="" src="./assets/images/logo_original.png" alt="movEasy">
-          <a href="./index.html" >HOME</a>
+          <a href="./index.html" class="active">HOME</a>
           <a href="./sobre.html">SOBRE</a>
-          <a href="./faq.html" class="active">FAQ</a>
+          <a href="./faq.html">FAQ</a>
           <a href="./suporte.html">SUPORTE</a>
           <a href="./Login-usuario.html">LOGIN</a>
         </div>
       </div>
       <div class="menu-desktop">
-        <a href="./index.html">HOME</a>
+        <a href="./index.html" class="active">HOME</a>
         <a href="./sobre.html">SOBRE</a>
-        <a href="./faq.html" class="active">FAQ</a>
+        <a href="./faq.html">FAQ</a>
         <a href="./suporte.html">SUPORTE</a>
         <a href="./Login-usuario.html">LOGIN</a>
       </div>
