classe active adequada para cada pagina

--- a/Web/faq.html
+++ b/Web/faq.html
@@ -36,9 +36,9 @@
         <img id="icone-mobile2" class="icone-mobile hidden" src="./assets/images/xmark.svg" alt="menu-mobile">
       </div>
         <div class="menu-mobile-links">
-          <a href="./index.html" class="active">HOME</a>
+          <a href="./index.html" >HOME</a>
           <a href="./sobre.html">SOBRE</a>
-          <a href="./faq.html">FAQ</a>
+          <a href="./faq.html"class="active">FAQ</a>
           <a href="./suporte.html">SUPORTE</a>
           <a href="./Login-usuario.html">LOGIN</a>
         </div>
