--- a/Web/recuperacao.html
+++ b/Web/recuperacao.html
@@ -39,11 +39,11 @@
           <img id="icone-mobile2" class="icone-mobile hidden" src="./assets/images/xmark.svg" alt="menu-mobile">
         </div>
           <div class="menu-mobile-links">
-            <a href="./index.html" class="active">HOME</a>
+            <a href="./index.html">HOME</a>
             <a href="./sobre.html">SOBRE</a>
             <a href="./faq.html">FAQ</a>
             <a href="./suporte.html">SUPORTE</a>
-            <a href="./Login-usuario.html">LOGIN</a>
+            <a href="./Login-usuario.html"class="active">LOGIN</a>
           </div>
         </div>
         <div class="menu-desktop">
