Alterações de padronização web

--- a/Web/recuperacao.html
+++ b/Web/recuperacao.html
@@ -71,7 +71,7 @@
             <div class="">
               <div class="campos mt-4 ml-4">
                 <div>
-                  <button type="button" class="recuperar-senha text-black text-lg font-normal font-['Inter']"
+                  <button type="button" class="recuperar-senha text-lg font-normal font-['Inter']"
                     onclick="window.location.href='./Login-usuario.html';">
                     < Voltar para o login</button>
                 </div>
