--- a/Web/index.html
+++ b/Web/index.html
@@ -138,7 +138,17 @@
     </form>
 
   </div>
-
+  <footer>
+    <div class="footer">
+      <div class="footer-icons">
+        <img src="./assets/images/linkedin-in(1).svg" alt="icone linkedin" srcset="">
+        <img src="./assets/images/facebook-f.svg" alt="icone linkedin" srcset="">
+        <img src="./assets/images/x-twitter(1).svg" alt="icone linkedin" srcset="">
+        <img src="./assets/images/instagram(1).svg" alt="icone linkedin" srcset="">
+    </div>
+      <span>© 2024 Copyright: movEasy</span>
+    </div>
+  </footer>
   <script src="./js/index.js"></script>
   <script src="./js/header.js"></script>
 </body>
