Alterações de fontes, cores e ajustes

--- a/Web/Login-usuario.html
+++ b/Web/Login-usuario.html
@@ -58,12 +58,12 @@
               <div class="">
                 <label for="login-email"
                   class="text-black text-lg font-normal font-['Inter']"><strong>Email:</strong></label>
-                <input type="text" id="email-login" class="bg-zinc-300 rounded-[10px]" placeholder="Digite o seu email"></input>
+                <input type="text" id="email-login" class="bg-zinc-300 rounded-[5px]" placeholder="Digite o seu email"></input>
               </div>
-              <div>
+              <div class="login-senha">
                 <label for="login-senha"
                   class="text-lg py-5 font-normal font-['Inter']"><strong>Senha:</strong></label>
-                <input type="password" id="senha-login"class="bg-zinc-300 rounded-[10px]" placeholder="Digite a sua senha"></input>
+                <input type="password" id="senha-login"class="bg-zinc-300 rounded-[5px]" placeholder="Digite a sua senha"></input>
               </div>
             </div>
 
