--- a/Web/index.html
+++ b/Web/index.html
@@ -58,7 +58,7 @@
     <form action="#">
       <div class="agendar-form">
         <div class="inputs flex flex-col md:flex-row md:place-content-around">
-          <div>
+          <div class="form-um">
           <label for="">Qual a origem da mudança?</label>
           <div class="mudanca-form">
             <select id="origem_estado" class="uf-estado" name="estado-id">
@@ -94,7 +94,7 @@
             <input id="origem_cidade" type="text" placeholder="Nome da cidade...">
           </div>
           </div>
-        <div>
+        <div class="form-dois">
           <label for="">Qual o destino da mudança?</label>
           <div class="mudanca-form">
             <select id="destino_estado" class="uf-estado" name="estado-id">
@@ -130,7 +130,7 @@
             <input id="destino_cidade" type="text" placeholder="Nome da cidade...">
             </div>
           </div>
-          <div class="buscar-btn md:mx-16">
+          <div class="buscar-btn">
             <button type="button" id="buscar-opc" class="">Buscar Opções</button>
           </div>
         </div>
@@ -140,11 +140,19 @@
   </div>
   <footer>
     <div class="footer">
-      <div class="footer-icons">
-        <img src="./assets/images/linkedin-in(1).svg" alt="icone linkedin" srcset="">
-        <img src="./assets/images/facebook-f.svg" alt="icone linkedin" srcset="">
-        <img src="./assets/images/x-twitter(1).svg" alt="icone linkedin" srcset="">
-        <img src="./assets/images/instagram(1).svg" alt="icone linkedin" srcset="">
+      <div class="footer-icon flex" >
+        <div class="ft-icon" id="in-icon">
+        <img src="./assets/images/linkedin-in(1).svg" class="ftr_icon" id="linkedin_icon"alt="icone linkedin" srcset="">
+      </div>
+      <div class="ft-icon" id="fb-icon">
+        <img src="./assets/images/facebook-f.svg" class="ftr_icon" id="facebook_icon" alt="icone facebook" srcset="">
+      </div>
+      <div class="ft-icon" id="x-icon">
+        <img src="./assets/images/x-twitter(1).svg" class="ftr_icon" id="twitter_icon" alt="icone x" srcset="">
+      </div>
+      <div class="ft-icon" id="insta-icon">
+        <img src="./assets/images/instagram(1).svg" class="ftr_icon" id="instagram_icon" alt="icone instagram" srcset="">
+      </div>
     </div>
       <span>© 2024 Copyright: movEasy</span>
     </div>
