Ajuste de padronização

--- a/Web/recuperacao.html
+++ b/Web/recuperacao.html
@@ -55,7 +55,7 @@
         <div class="corpo">
           <div class="menu-login">
             <div class="controlador-login">
-              <div class="mt-8">
+              <div class="recuperar-email mt-8">
                 <label for="login-email"
                   class="text-black text-lg font-normal font-['Inter']"><strong>Email:</strong></label>
                 <input type="text" id="email-recuperacao" class="bg-zinc-300 rounded-[10px]"
